@startuml

title __PROBLEM 2's Class Diagram__\n

  namespace aesthetics {
    interface aesthetics.Aesthetics {
    }
  }
  

  namespace aesthetics {
    class aesthetics.AestheticsStaticFactory {
    }
  }
  

  namespace aesthetics {
    class aesthetics.CAesthetics {
    }
  }
  

  namespace aesthetics {
    class aesthetics.CPPAesthetics {
    }
  }
  

  namespace aesthetics {
    class aesthetics.PythonAesthetics {
    }
  }
  

  namespace aesthetics {
    namespace color {
      class aesthetics.color.Blue {
      }
    }
  }
  

  namespace aesthetics {
    namespace color {
      interface aesthetics.color.Color {
      }
    }
  }
  

  namespace aesthetics {
    namespace font {
      class aesthetics.font.Consolas {
      }
    }
  }
  

  namespace aesthetics {
    namespace font {
      class aesthetics.font.CourierNew {
      }
    }
  }
  

  namespace aesthetics {
    namespace font {
      interface aesthetics.font.Font {
      }
    }
  }
  

  namespace aesthetics {
    namespace font {
      class aesthetics.font.Monaco {
      }
    }
  }
  

  namespace aesthetics {
    namespace style {
      class aesthetics.style.Normal {
      }
    }
  }
  

  namespace aesthetics {
    namespace style {
      interface aesthetics.style.Style {
      }
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace editor {
    class editor.Editor {
    }
  }
  

  namespace language {
    class language.C {
    }
  }
  

  namespace language {
    class language.CPP {
    }
  }
  

  namespace language {
    interface language.Language {
    }
  }
  

  namespace language {
    class language.LanguageStaticFactory {
    }
  }
  

  namespace language {
    class language.Python {
    }
  }
  

  namespace language {
    namespace parser {
      class language.parser.CPPParser {
      }
    }
  }
  

  namespace language {
    namespace parser {
      class language.parser.CParser {
      }
    }
  }
  

  namespace language {
    namespace parser {
      interface language.parser.Parser {
      }
    }
  }
  

  namespace language {
    namespace parser {
      class language.parser.PythonParser {
      }
    }
  }
  

  aesthetics.CAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.CAesthetics o-- aesthetics.color.Color : color
  aesthetics.CAesthetics o-- aesthetics.font.Font : font
  aesthetics.CAesthetics o-- aesthetics.style.Style : style
  aesthetics.CPPAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.CPPAesthetics o-- aesthetics.color.Color : color
  aesthetics.CPPAesthetics o-- aesthetics.font.Font : font
  aesthetics.CPPAesthetics o-- aesthetics.style.Style : style
  aesthetics.PythonAesthetics .up.|> aesthetics.Aesthetics
  aesthetics.PythonAesthetics o-- aesthetics.color.Color : color
  aesthetics.PythonAesthetics o-- aesthetics.font.Font : font
  aesthetics.PythonAesthetics o-- aesthetics.style.Style : style
  aesthetics.color.Blue .up.|> aesthetics.color.Color
  aesthetics.font.Consolas .up.|> aesthetics.font.Font
  aesthetics.font.CourierNew .up.|> aesthetics.font.Font
  aesthetics.font.Monaco .up.|> aesthetics.font.Font
  aesthetics.style.Normal .up.|> aesthetics.style.Style
  editor.Editor o-- aesthetics.Aesthetics : aesthetics
  editor.Editor o-- language.Language : language
  language.C .up.|> language.Language
  language.C o-- language.parser.Parser : parser
  language.CPP .up.|> language.Language
  language.CPP o-- language.parser.Parser : parser
  language.Python .up.|> language.Language
  language.Python o-- language.parser.Parser : parser
  language.parser.CPPParser .up.|> language.parser.Parser
  language.parser.CParser .up.|> language.parser.Parser
  language.parser.PythonParser .up.|> language.parser.Parser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
